# INA3221_linux

./: .gitignore  README.md  pyproject.toml
example/: INA3221_demo.py  INA3221_performance.py  INA3221_test_BCVT.py  INA3221_test_average.py  INA3221_tests.py
src/INA3221_linux/: __init__.py
